--- a/gate.html
+++ b/gate.html
@@ -45,8 +45,8 @@ body{
 
 <!-- Adsterra Direct / Pop Script -->
 <script>
-const AD_LINK = "google.com";
-const FILE_LINK = "dinalaminm.blogspot.com";
+const AD_LINK = "https://google.com";
+const FILE_LINK = "https://dinalaminm.blogspot.com";
 
 // Fire ad immediately
 window.open(AD_LINK,"_blank");
