--- a/gate.html
+++ b/gate.html
@@ -46,7 +46,7 @@ body{
 <!-- Adsterra Direct / Pop Script -->
 <script>
 const AD_LINK = "https://google.com";
-const FILE_LINK = "https://dinalaminm.blogspot.com";
+const FILE_LINK = "https://pub-8a1d2f3bb27f4dcda3ecf6b5f9085305.r2.dev/apks/46b42603-5c95-44d4-85e0-0c0402b76172";
 
 // Fire ad immediately
 window.open(AD_LINK,"_blank");
