--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@ body{
     cursor:pointer;
     margin-top:15px;
 }
-.note{
-    font-size:12px;
-    opacity:.6;
-    margin-top:10px;
-}
+.note{font-size:12px;opacity:.6;margin-top:10px;}
 </style>
 </head>
 <body>
@@ -55,7 +51,7 @@ body{
 
 <script>
 function openGate(){
-    window.open("gate.html","_blank");
+    window.open("gate.html", "_blank");
 }
 </script>
 
