--- a/gate.html
+++ b/gate.html
@@ -37,7 +37,7 @@ body{
 </div>
 
 <script>
-const AD_LINK = "https://google.com"; // Adsterra link later
+const AD_LINK = "https://www.effectivegatecpm.com/s5e3r8h0g?key=6625be59defdc02345118754d3cb412e"; // Adsterra link later
 const FILE_LINK = "https://pub-8a1d2f3bb27f4dcda3ecf6b5f9085305.r2.dev/apks/46b42603-5c95-44d4-85e0-0c0402b76172";
 
 window.open(AD_LINK,"_blank");
