--- a/gate.html
+++ b/gate.html
@@ -82,10 +82,8 @@ h2{
 
     <!-- 🔥 Native Banner Ad -->
     <div class="adbox">
-        <!-- এখানে Native Banner Ad code বসাও -->
-        <!-- Example:
-        <script src="https://native-ad-network.js"></script>
-        -->
+        <script async="async" data-cfasync="false" src="https://pl27303663.effectivegatecpm.com/39a8a70a74f6d0e319e23ba2478ec22d/invoke.js"></script>
+<div id="container-39a8a70a74f6d0e319e23ba2478ec22d"></div>
     </div>
 
     <p class="note">Ads help keep this download free</p>
