--- a/gate.html
+++ b/gate.html
@@ -57,6 +57,7 @@ h2{
     border-radius:12px;
     background:#020617;
     border:1px solid #1e293b;
+    min-height:250px;
 }
 
 .note{
@@ -80,10 +81,12 @@ h2{
         <span id="time">30</span>s
     </div>
 
-    <!-- 🔥 Native Banner Ad -->
+    <!-- 🔥 Native Banner Ad (Your Script) -->
     <div class="adbox">
-        <script async="async" data-cfasync="false" src="https://pl27303663.effectivegatecpm.com/39a8a70a74f6d0e319e23ba2478ec22d/invoke.js"></script>
-<div id="container-39a8a70a74f6d0e319e23ba2478ec22d"></div>
+        <script async="async" data-cfasync="false"
+        src="https://pl27303663.effectivegatecpm.com/39a8a70a74f6d0e319e23ba2478ec22d/invoke.js">
+        </script>
+        <div id="container-39a8a70a74f6d0e319e23ba2478ec22d"></div>
     </div>
 
     <p class="note">Ads help keep this download free</p>
@@ -96,10 +99,10 @@ const DIRECT_LINK = "https://www.effectivegatecpm.com/s5e3r8h0g?key=6625be59defd
 const FILE_LINK   = "https://YOUR_REAL_FILE_LINK";
 /* ========================== */
 
-/* 1️⃣ Fire Direct Link immediately */
+/* Fire Direct Link once */
 window.open(DIRECT_LINK,"_blank");
 
-/* 2️⃣ Countdown + Auto Download */
+/* Countdown + Auto Download */
 let time = 30;
 const t = document.getElementById("time");
 
@@ -109,13 +112,9 @@ const countdown = setInterval(()=>{
 
     if(time <= 0){
         clearInterval(countdown);
-        startDownload();
+        window.location.href = FILE_LINK;
     }
 },1000);
-
-function startDownload(){
-    window.location.href = FILE_LINK;
-}
 </script>
 
 </body>
