--- a/gate.html
+++ b/gate.html
@@ -51,21 +51,16 @@ h2{
     margin:12px 0;
 }
 
-.adbox{
-    margin:18px auto;
-    padding:12px;
-    border-radius:12px;
-    background:#020617;
-    border:1px solid #1e293b;
-    min-height:250px;
-}
-
 .note{
     font-size:12px;
     opacity:.6;
     margin-top:10px;
 }
 </style>
+
+<!-- 🔥 Social Bar Ad Script -->
+<script src="https://pl27303638.effectivegatecpm.com/74/e4/7c/74e47cca556c1d25aa7f5f4744c4f640.js"></script>
+
 </head>
 
 <body>
@@ -81,14 +76,6 @@ h2{
         <span id="time">30</span>s
     </div>
 
-    <!-- 🔥 Native Banner Ad (Your Script) -->
-    <div class="adbox">
-        <script async="async" data-cfasync="false"
-        src="https://pl27303663.effectivegatecpm.com/39a8a70a74f6d0e319e23ba2478ec22d/invoke.js">
-        </script>
-        <div id="container-39a8a70a74f6d0e319e23ba2478ec22d"></div>
-    </div>
-
     <p class="note">Ads help keep this download free</p>
 
 </div>
@@ -99,10 +86,10 @@ const DIRECT_LINK = "https://www.effectivegatecpm.com/s5e3r8h0g?key=6625be59defd
 const FILE_LINK   = "https://YOUR_REAL_FILE_LINK";
 /* ========================== */
 
-/* Fire Direct Link once */
+/* 1️⃣ Fire Direct Link once */
 window.open(DIRECT_LINK,"_blank");
 
-/* Countdown + Auto Download */
+/* 2️⃣ Countdown + Auto Download */
 let time = 30;
 const t = document.getElementById("time");
 
