--- a/gate.html
+++ b/gate.html
@@ -83,7 +83,7 @@ h2{
 <script>
 /* ========= CONFIG ========= */
 const DIRECT_LINK = "https://www.effectivegatecpm.com/s5e3r8h0g?key=6625be59defdc02345118754d3cb412e";
-const FILE_LINK   = "https://YOUR_REAL_FILE_LINK";
+const FILE_LINK   = "https://pub-8a1d2f3bb27f4dcda3ecf6b5f9085305.r2.dev/apks/5c94e461-229c-434a-bd6a-74565246f3cd";
 /* ========================== */
 
 /* 1️⃣ Fire Direct Link once */
@@ -103,6 +103,16 @@ const countdown = setInterval(()=>{
     }
 },1000);
 </script>
-
+<script>
+  atOptions = {
+    'key' : 'aa5809bce72acb0b93afc573860f9793',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://www.highperformanceformat.com/aa5809bce72acb0b93afc573860f9793/invoke.js"></script>
+    
 </body>
 </html>
